Some new OrderService Tests