@@ -1,144 +1,157 @@
 package bg.mck.ordercommandservice.service;
 
 import bg.mck.ordercommandservice.dto.*;
-import bg.mck.ordercommandservice.entity.ConstructionSiteEntity;
 import bg.mck.ordercommandservice.entity.MetalEntity;
 import bg.mck.ordercommandservice.entity.OrderEntity;
+import bg.mck.ordercommandservice.entity.ConstructionSiteEntity;
 import bg.mck.ordercommandservice.entity.enums.MaterialType;
 import bg.mck.ordercommandservice.entity.enums.OrderStatus;
-import bg.mck.ordercommandservice.event.CreateOrderEvent;
-import bg.mck.ordercommandservice.event.FasterEvent;
 import bg.mck.ordercommandservice.exception.OrderNotFoundException;
-import bg.mck.ordercommandservice.mapper.FastenerMapper;
 import bg.mck.ordercommandservice.mapper.OrderMapper;
 import bg.mck.ordercommandservice.repository.OrderRepository;
-import bg.mck.ordercommandservice.testUtils.ConstructionSiteUtil;
-import bg.mck.ordercommandservice.testUtils.MaterialUtil;
-import bg.mck.ordercommandservice.testUtils.OrderUtil;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.*;
 
-import static bg.mck.ordercommandservice.testUtils.OrderUtil.createCreateOrderEvent;
+import static bg.mck.ordercommandservice.testUtils.ConstructionSiteUtil.createConstructionSiteDTO;
+import static bg.mck.ordercommandservice.testUtils.ConstructionSiteUtil.createConstructionSiteEntity;
+import static bg.mck.ordercommandservice.testUtils.OrderUtil.*;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
-class OrderServiceTest {
+public class OrderServiceTest {
+
     @Mock
     private OrderRepository orderRepository;
-    @Mock
-    private ConstructionSiteService constructionSiteService;
+
     @Mock
     private OrderMapper orderMapper;
+
     @Mock
-    private FastenerMapper fastenerMapper;
-    @Mock
-    private InventoryService inventoryService;
-    @Mock
-    private OrderEventService orderEventService;
-    @InjectMocks
-    private OrderService orderService;
+    private ConstructionSiteService constructionSiteService;
+
     @Mock
     private MaterialService materialService;
+
+    @Mock
+    private InventoryService inventoryService;
+
+    @Mock
+    private OrderEventService orderEventService;
+
+    @InjectMocks
+    private OrderService orderService;
 
     private OrderDTO orderDTO;
     private OrderEntity orderEntity;
     private ConstructionSiteEntity constructionSiteEntity;
     private ConstructionSiteDTO constructionSiteDTO;
+    private OrderConfirmationDTO orderConfirmationDTO;
 
     @BeforeEach
-    public void setUp() {
-        constructionSiteEntity = ConstructionSiteUtil.createConstructionSiteEntityWithID();
-        constructionSiteDTO = ConstructionSiteUtil.createConstructionSiteDTO();
-        orderDTO = OrderUtil.createOrderDTO();
-        orderEntity = OrderUtil.createOrderEntity();
-        CreateOrderEvent<?> createOrderEvent = createCreateOrderEvent();
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
 
-        when(orderMapper.toOrderEntity(orderDTO)).thenReturn(orderEntity);
-        when(orderMapper.toEvent(orderEntity)).thenReturn(createOrderEvent);
-        when(constructionSiteService.getConstructionSiteByNumberAndName(any(ConstructionSiteDTO.class))).thenReturn(constructionSiteEntity);
-        when(orderRepository.findLastOrderNumber()).thenReturn(Optional.of(3));
+        // Initialize test data
+        orderDTO = createOrderDTO();
+        orderEntity = createOrderEntity();
+        constructionSiteEntity = createConstructionSiteEntity();
+        constructionSiteDTO = createConstructionSiteDTO();
+        orderConfirmationDTO = createOrderConfirmationDTO();
+    }
+
+    @Test
+    void testCreateOrder_Success() {
+        when(orderMapper.toOrderEntity(any(OrderDTO.class))).thenReturn(orderEntity);
+        when(constructionSiteService.getConstructionSiteByNumberAndName(any())).thenReturn(constructionSiteEntity);
+        when(orderRepository.findLastOrderNumber()).thenReturn(Optional.of(100));
         when(orderRepository.save(any(OrderEntity.class))).thenReturn(orderEntity);
-        when(orderRepository.findById(1L)).thenReturn(Optional.of(orderEntity));
-//        doNothing().when(orderService).sendMaterialsToInventory(any(OrderEntity.class));
+        when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(orderConfirmationDTO);
 
-    }
+        OrderConfirmationDTO result = orderService.createOrder(orderDTO, "test@example.com", Collections.emptyList());
 
-    @AfterEach
-    public void tearDown() {
-        orderRepository.deleteAll();
-        reset(orderRepository, constructionSiteService, orderMapper);
-    }
-
-    @Test
-    void test_CreateOrder_shouldReturn_correctData() {
-        FastenerDTO fastener1 = MaterialUtil.createFastenerDTO();
-        FastenerDTO fastener2 = MaterialUtil.createFastenerDTO();
-
-        orderDTO.setFasteners(List.of(fastener1, fastener2));
-        when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(new OrderConfirmationDTO.Builder()
-                .orderStatus(OrderStatus.CREATED)
-                .orderId(1L)
-                .orderNumber(4)
-                .constructionSiteName("Site Name")
-                .constructionSiteNumber("1234")
-                .build());
-
-        OrderConfirmationDTO expectedCreateOrderDTO = orderService.createOrder(orderDTO, "test@abv.bg", null);
+        assertNotNull(result);
+        verify(orderMapper).toOrderEntity(orderDTO);
         verify(orderRepository).save(orderEntity);
-
-        assertEquals(OrderStatus.CREATED, expectedCreateOrderDTO.getOrderStatus());
-        assertNotEquals(OrderStatus.UPDATED, expectedCreateOrderDTO.getOrderStatus());
-        assertEquals(1L, expectedCreateOrderDTO.getOrderId());
-        assertEquals(4, expectedCreateOrderDTO.getOrderNumber());
-        assertEquals("1234", expectedCreateOrderDTO.getConstructionSiteNumber());
-        assertEquals("Site Name", expectedCreateOrderDTO.getConstructionSiteName());
+        verify(inventoryService).sendMaterialsToInventory(orderDTO);
+        verify(orderEventService).createOrderEvent(orderEntity);
     }
 
     @Test
-    void test_CreateOrder_With_Fasteners_shouldReturn_correctData() {
-        FastenerDTO fastener1 = MaterialUtil.createFastenerDTO();
-        FastenerDTO fastener2 = MaterialUtil.createFastenerDTO();
+    void testCreateOrder_NoPreviousOrderNumber() {
+        when(orderMapper.toOrderEntity(any(OrderDTO.class))).thenReturn(orderEntity);
+        when(constructionSiteService.getConstructionSiteByNumberAndName(any())).thenReturn(constructionSiteEntity);
+        when(orderRepository.findLastOrderNumber()).thenReturn(Optional.empty());
+        when(orderRepository.save(any(OrderEntity.class))).thenReturn(orderEntity);
+        when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(orderConfirmationDTO);
 
-        orderDTO.setConstructionSite(constructionSiteDTO)
-                .setFasteners(List.of(fastener1, fastener2));
-        when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(new OrderConfirmationDTO.Builder()
-                .orderStatus(OrderStatus.CREATED)
-                .orderId(1L)
-                .orderNumber(4)
-                .constructionSiteName("Site Name")
-                .constructionSiteNumber("1234")
-                .build());
+        OrderConfirmationDTO result = orderService.createOrder(orderDTO, "test@example.com", Collections.emptyList());
 
-        OrderConfirmationDTO expectedCreateOrderDTO = orderService.createOrder(orderDTO, "test@abv.bg", null);
+        assertNotNull(result);
+        verify(orderMapper).toOrderEntity(orderDTO);
+        verify(orderRepository).save(orderEntity);
+        verify(inventoryService).sendMaterialsToInventory(orderDTO);
+        verify(orderEventService).createOrderEvent(orderEntity);
+    }
 
-        verify(orderRepository, times(1)).save(orderEntity);
-        assertEquals(OrderStatus.CREATED, expectedCreateOrderDTO.getOrderStatus());
-        assertEquals(1L, expectedCreateOrderDTO.getOrderId());
-        assertEquals(4, expectedCreateOrderDTO.getOrderNumber());
-        assertEquals("1234", expectedCreateOrderDTO.getConstructionSiteNumber());
-        assertEquals("Site Name", expectedCreateOrderDTO.getConstructionSiteName());
+    @Test
+    void testCreateOrder_ExceptionDuringProcessing() {
+        when(orderMapper.toOrderEntity(any(OrderDTO.class))).thenReturn(orderEntity);
+        when(constructionSiteService.getConstructionSiteByNumberAndName(any())).thenReturn(constructionSiteEntity);
+        when(orderRepository.save(any(OrderEntity.class))).thenThrow(new RuntimeException("Database error"));
+
+        assertThrows(RuntimeException.class, () -> {
+            orderService.createOrder(orderDTO, "test@example.com", Collections.emptyList());
+        });
+
+        verify(orderMapper).toOrderEntity(orderDTO);
+        verify(orderRepository).save(orderEntity);
+        verify(inventoryService, never()).sendMaterialsToInventory(any(OrderDTO.class));
+        verify(orderEventService, never()).createOrderEvent(any(OrderEntity.class));
+    }
+
+    @Test
+    void testUpdateOrder_Success() {
+        when(orderMapper.toOrderEntity(any(OrderDTO.class))).thenReturn(orderEntity);
+        when(constructionSiteService.getConstructionSiteByName(anyString())).thenReturn(constructionSiteEntity);
+        when(orderRepository.save(any(OrderEntity.class))).thenReturn(orderEntity);
+        when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(orderConfirmationDTO);
+
+        OrderConfirmationDTO result = orderService.updateOrder(orderDTO, "test@example.com", Collections.emptyList());
+
+        assertNotNull(result);
+        verify(orderMapper).toOrderEntity(orderDTO);
+        verify(orderRepository).save(orderEntity);
+        verify(orderEventService).createOrderEvent(orderEntity);
+    }
+
+    @Test
+    void testUpdateOrder_OrderNotFound() {
+        when(orderMapper.toOrderEntity(any(OrderDTO.class))).thenReturn(orderEntity);
+        when(constructionSiteService.getConstructionSiteByName(anyString())).thenReturn(constructionSiteEntity);
+        when(orderRepository.save(any(OrderEntity.class))).thenThrow(new OrderNotFoundException("Order not found"));
+
+        assertThrows(OrderNotFoundException.class, () -> {
+            orderService.updateOrder(orderDTO, "test@example.com", Collections.emptyList());
+        });
+
+        verify(orderMapper).toOrderEntity(orderDTO);
+        verify(orderRepository).save(orderEntity);
+        verify(orderEventService, never()).createOrderEvent(any(OrderEntity.class));
     }
 
     @Test
     void deleteOrder_ShouldThrowOrderNotFoundException_WhenOrderDoesNotExist() {
-        // Arrange
         Long orderId = 1L;
         String email = "test@example.com";
-
         when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
 
-        // Act & Assert
         OrderNotFoundException exception = assertThrows(OrderNotFoundException.class, () -> {
             orderService.deleteOrder(orderId, email);
         });
@@ -152,7 +165,6 @@ class OrderServiceTest {
 
     @Test
     void updateOrder_ShouldReturnOrderConfirmation_WhenOrderIsUpdated() {
-        // Arrange
         OrderDTO orderDTO = new OrderDTO();
 
         ConstructionSiteDTO constructionSiteDTO = new ConstructionSiteDTO();
@@ -188,10 +200,8 @@ class OrderServiceTest {
                     .build();
         }).when(orderEventService).createOrderEvent(any(OrderEntity.class));
 
-        // Act
         OrderConfirmationDTO result = orderService.updateOrder(orderDTO, email, files);
 
-        // Assert
         assertNotNull(result);
         assertEquals(1L, result.getOrderId());
         assertEquals(100, result.getOrderNumber());
@@ -202,29 +212,21 @@ class OrderServiceTest {
 
     @Test
     void deleteOrder_ShouldReturnOrderConfirmation_WhenOrderIsDeleted() {
-        // Arrange
-        Long orderId = 1L;
-        String email = "test@example.com";
-        OrderEntity orderEntity = new OrderEntity();
-        orderEntity
-                .setOrderNumber(101)
-                .setOrderStatus(OrderStatus.CREATED)
-                .setId(orderId);
 
-        when(orderRepository.findById(orderId)).thenReturn(Optional.of(orderEntity));
+        OrderEntity orderEntity = createOrderEntity();
+
+        when(orderRepository.findById(orderEntity.getId())).thenReturn(Optional.of(orderEntity));
 
         OrderConfirmationDTO confirmationDTO = new OrderConfirmationDTO.Builder()
                 .orderStatus(OrderStatus.CANCELLED)
-                .orderId(orderId)
+                .orderId(orderEntity.getId())
                 .orderNumber(101)
                 .build();
 
         when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(confirmationDTO);
 
-        // Act
-        OrderConfirmationDTO result = orderService.deleteOrder(orderId, email);
+        OrderConfirmationDTO result = orderService.deleteOrder(orderEntity.getId(), orderEntity.getEmail());
 
-        // Assert
         assertNotNull(result);
         assertEquals(OrderStatus.CANCELLED, result.getOrderStatus());
         verify(orderRepository).save(orderEntity);
@@ -234,26 +236,21 @@ class OrderServiceTest {
     @Test
     void restoreOrder_ShouldReturnOrderConfirmation_WhenOrderIsRestored() {
         // Arrange
-        Long orderId = 1L;
         String email = "test@example.com";
-        OrderEntity orderEntity = new OrderEntity();
-        orderEntity
-                .setOrderNumber(101)
-                .setOrderStatus(OrderStatus.CANCELLED)
-                .setId(orderId);
+        OrderEntity orderEntity = createOrderEntity();
 
-        when(orderRepository.findById(orderId)).thenReturn(Optional.of(orderEntity));
+        when(orderRepository.findById(orderEntity.getId())).thenReturn(Optional.of(orderEntity));
 
         OrderConfirmationDTO confirmationDTO = new OrderConfirmationDTO.Builder()
                 .orderStatus(OrderStatus.PENDING)
-                .orderId(orderId)
+                .orderId(orderEntity.getId())
                 .orderNumber(101)
                 .build();
 
         when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(confirmationDTO);
 
         // Act
-        OrderConfirmationDTO result = orderService.restoreOrder(orderId, email);
+        OrderConfirmationDTO result = orderService.restoreOrder(orderEntity.getId(), email);
 
         // Assert
         assertNotNull(result);
@@ -264,7 +261,6 @@ class OrderServiceTest {
 
     @Test
     void deleteMaterial_ShouldReturnOrderConfirmation_WhenMaterialIsDeleted() {
-        // Arrange
         Long orderId = 1L;
         Long materialId = 2L;
         String email = "test@example.com";
@@ -283,10 +279,8 @@ class OrderServiceTest {
 
         when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(confirmationDTO);
 
-        // Act
         OrderConfirmationDTO result = orderService.deleteMaterial(orderId, materialId, email);
 
-        // Assert
         assertNotNull(result);
         verify(materialService).deleteMaterial(materialId, "METAL");
         verify(orderEventService).createOrderEvent(orderEntity);
@@ -294,15 +288,13 @@ class OrderServiceTest {
 
     @Test
     void updateOrderStatus_ShouldReturnOrderConfirmation_WhenStatusIsUpdated() {
-        // Arrange
+
         OrderDTO orderDTO = new OrderDTO();
         orderDTO.setId(1L);
         orderDTO.setOrderStatus(OrderStatus.DELIVERY_IN_PROGRESS);
 
-        // Assuming you're testing with METAL type materials
         orderDTO.setMaterialType(MaterialType.METAL);
 
-        // Initialize materials and DTOs
         Set<MetalEntity> metals = new HashSet<>();
         MetalEntity metalEntity = new MetalEntity();
         metalEntity.setId(1L);
@@ -322,7 +314,6 @@ class OrderServiceTest {
                 .setMetals(metals)
                 .setId(1L);
 
-        // Set DTOs in the orderDTO
         orderDTO.setMetals(metalDTOs);
 
         when(orderRepository.findById(orderDTO.getId())).thenReturn(Optional.of(orderEntity));
@@ -334,10 +325,8 @@ class OrderServiceTest {
 
         when(orderEventService.createOrderEvent(any(OrderEntity.class))).thenReturn(confirmationDTO);
 
-        // Act
         OrderConfirmationDTO result = orderService.updateOrderStatus(orderDTO, "Full Name");
 
-        // Assert
         assertNotNull(result);
         assertEquals(OrderStatus.DELIVERY_IN_PROGRESS, result.getOrderStatus());
         verify(orderRepository).save(orderEntity);
